k8s/cache/02-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: security-app-cache
spec:
  host: security-app-cache
  subsets:
  - name: v1
    labels:
      version: v1
