k8s/cache/03-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: security-app-cache
spec:
  hosts:
  - security-app-cache
  http:
  - route:
    - destination:
        host: security-app-cache
        subset: v1
